# backyard_sun_map

./: .envrc  .gitignore  README.md  pyproject.toml
backyard_sun_map/: __init__.py  cli.py  geometry.py  plotting.py  scene.py  simulation.py  solar.py
scenes/: backyard_example.yaml
